--- a/quizz/index.html
+++ b/quizz/index.html
@@ -20,10 +20,21 @@
 	<meta name="mobile-web-app-capable" content="yes" />
 	<link rel="shortcut icon" sizes="256x256" href="icon-256.png" />
 	
-	<title>New project</title>
+	<title>VinoQuizz</title>
 	<!-- Note: running this exported project from disk may not work exactly like preview, since browsers block some features on the file:// protocol.  Once you've uploaded it to a server, it should work OK. -->
 
 	<style type="text/css">
+
+	@font-face {
+    font-weight: normal;
+    font-style: normal;
+    font-family: "Grobold";
+    src: url("/fonts/grobold-webfont.eot");
+    src: url("/fonts/grobold-webfont.eot?#iefix") format("embedded-opentype"),
+         url("/fonts/grobold-webfont.woff") format("woff"),
+         url("/fonts/grobold-webfont.ttf") format("truetype"),
+         url("/fonts/grobold-webfont.svg#groboldregular") format("svg");
+}
 		html, body {
 			background-color: black;
 			color: white;
