--- a/quizz/index.html
+++ b/quizz/index.html
@@ -29,11 +29,11 @@
     font-weight: normal;
     font-style: normal;
     font-family: "Grobold";
-    src: url("/fonts/grobold-webfont.eot");
-    src: url("/fonts/grobold-webfont.eot?#iefix") format("embedded-opentype"),
-         url("/fonts/grobold-webfont.woff") format("woff"),
-         url("/fonts/grobold-webfont.ttf") format("truetype"),
-         url("/fonts/grobold-webfont.svg#groboldregular") format("svg");
+    src: url("fonts/grobold-webfont.eot");
+    src: url("fonts/grobold-webfont.eot?#iefix") format("embedded-opentype"),
+         url("fonts/grobold-webfont.woff") format("woff"),
+         url("fonts/grobold-webfont.ttf") format("truetype"),
+         url("fonts/grobold-webfont.svg#groboldregular") format("svg");
 }
 		html, body {
 			background-color: black;
