--- a/quizz/index.html
+++ b/quizz/index.html
@@ -28,7 +28,7 @@
 	@font-face {
     font-weight: normal;
     font-style: normal;
-    font-family: "Grobold";
+    font-family: "GroboldButton";
     src: url("fonts/grobold-webfont.eot");
     src: url("fonts/grobold-webfont.eot?#iefix") format("embedded-opentype"),
          url("fonts/grobold-webfont.woff") format("woff"),
