--- a/quizz/index.html
+++ b/quizz/index.html
@@ -66,7 +66,7 @@
 	</script>
 
 		<!-- The canvas must be inside a div called c2canvasdiv -->
-		<div id="c2canvasdiv" style="width: 640px; height: 480px;">
+		<div id="c2canvasdiv" style="width: 640px; height: 480px;background-color:white;">
 		
 			<!-- The canvas the project will render to.  If you change its ID, don't forget to change the
 			ID the runtime looks for in the jQuery ready event (above). -->
