add mautic tracker

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@ $ git checkout gh-pages
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
+      <img src="https://metidia.mautic.org/mtracking.gif">
       <footer class="inner">
         <p class="copyright">Games.github.io maintained by <a href="https://github.com/oswaldB">oswaldB</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
