adding tracking mautic

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ $ git checkout gh-pages
     <div id="footer_wrap" class="outer">
      
       <footer class="inner">
+         <img src="https://metidia.mautic.com/mtracking.gif">
         <p class="copyright">Games.github.io maintained by <a href="https://github.com/oswaldB">oswaldB</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
